--- a/charts/monitoring/alertmanager/templates/statefulset.yaml
+++ b/charts/monitoring/alertmanager/templates/statefulset.yaml
@@ -30,6 +30,9 @@ spec:
       labels:
         app: {{ template "name" . }}
     spec:
+      {{- if .Values.alertmanager.imagePullSecrets }}
+      imagePullSecrets: {{ toYaml .Values.alertmanager.imagePullSecrets | nindent 8 }}
+      {{- end }}
       containers:
   {{- if .Values.alertmanager.sidecarContainers }}
     {{- range $name, $spec :=  .Values.alertmanager.sidecarContainers }}
