--- a/charts/monitoring/kube-state-metrics/templates/service.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/service.yaml
@@ -15,19 +15,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-state-metrics
   labels:
-    app: kube-state-metrics
+    app.kubernetes.io/component: exporter
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: 2.8.2
+  name: kube-state-metrics
 spec:
   clusterIP: None
   ports:
   - name: http-metrics
     port: 8080
     targetPort: http-metrics
-    protocol: TCP
   - name: telemetry
     port: 8081
     targetPort: telemetry
-    protocol: TCP
   selector:
-    app: kube-state-metrics
+    app.kubernetes.io/name: kube-state-metrics
