Adjust health check port of addon-resizer

--- a/charts/monitoring/kube-state-metrics/templates/deployment.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/deployment.yaml
@@ -85,7 +85,7 @@ spec:
           - --deployment=kube-state-metrics
           - --pod=$(MY_POD_NAME)
           - --namespace=$(MY_POD_NAMESPACE)
-          - --healthcheck-address=":8088"
+          - --healthcheck-address=:8088
         env:
         - name: MY_POD_NAME
           valueFrom:
