Fix kube-state-metrics-resizer role

--- a/charts/monitoring/kube-state-metrics/templates/role.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/role.yaml
@@ -21,8 +21,8 @@ rules:
   resources:
   - pods
   verbs: ["get"]
-- apiGroups: ["extensions"]
+- apiGroups: ["apps"]
   resources:
   - deployments
   resourceNames: ["kube-state-metrics"]
-  verbs: ["get", "update"]
+  verbs: ["get", "update", "patch"]
