Fix template to not generate trailing whitespace
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/charts/mla/alertmanager-proxy/templates/authzserver-deployment.yaml
+++ b/charts/mla/alertmanager-proxy/templates/authzserver-deployment.yaml
@@ -34,7 +34,7 @@ spec:
         app.kubernetes.io/name: alertmanager-authz-server
     spec:
       {{- if .Values.alertmanagerProxy.authz.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.alertmanagerProxy.authz.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.alertmanagerProxy.authz.imagePullSecrets | nindent 8 }}
       {{- end }}
       serviceAccountName: alertmanager-authz-server
       containers:
