--- a/charts/mla/alertmanager-proxy/templates/proxy-deployment.yaml
+++ b/charts/mla/alertmanager-proxy/templates/proxy-deployment.yaml
@@ -38,7 +38,7 @@ spec:
         app.kubernetes.io/name: alertmanager-proxy
     spec:
       {{- if .Values.alertmanagerProxy.proxy.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.alertmanagerProxy.proxy.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.alertmanagerProxy.proxy.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
         - name: envoy
