--- a/charts/iap/templates/deployments.yaml
+++ b/charts/iap/templates/deployments.yaml
@@ -37,7 +37,7 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") $ | sha256sum }}
     spec:
       {{- if .Values.iap.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.iap.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.iap.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
       - name: oauth2-proxy
