--- a/charts/monitoring/blackbox-exporter/templates/deployment.yaml
+++ b/charts/monitoring/blackbox-exporter/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       {{- if .Values.blackboxExporter.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.blackboxExporter.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.blackboxExporter.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
       - name: exporter
