--- a/charts/monitoring/grafana/templates/deployment.yaml
+++ b/charts/monitoring/grafana/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/config: {{ include (print $.Template.BasePath "/configmaps.yaml") . | sha256sum }}
     spec:
       {{- if .Values.grafana.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.grafana.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.grafana.imagePullSecrets | nindent 8 }}
       {{- end }}
       initContainers:
       {{- if .Values.grafana.provisioning.datasources.paths }}
