--- a/charts/monitoring/kube-state-metrics/templates/deployment.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
       serviceAccountName: kube-state-metrics
       automountServiceAccountToken: true
       {{- if .Values.kubeStateMetrics.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.kubeStateMetrics.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.kubeStateMetrics.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
       - name: kube-state-metrics
