--- a/charts/monitoring/prometheus/templates/statefulset.yaml
+++ b/charts/monitoring/prometheus/templates/statefulset.yaml
@@ -43,7 +43,7 @@ spec:
         {{- end }}
     spec:
       {{- if .Values.prometheus.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.prometheus.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.prometheus.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
       - name: prometheus
