--- a/charts/s3-exporter/templates/deployment.yaml
+++ b/charts/s3-exporter/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       serviceAccountName: s3-exporter
       {{- if .Values.s3Exporter.imagePullSecrets }}
-      imagePullSecrets: {{ toYaml .Values.s3Exporter.imagePullSecrets | nindent 8 }}
+      imagePullSecrets: {{- toYaml .Values.s3Exporter.imagePullSecrets | nindent 8 }}
       {{- end }}
       containers:
         - name: s3-exporter
