--- a/docs/zz_generated.kubermaticConfiguration.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.yaml
@@ -292,6 +292,10 @@ spec:
       }
     # DockerRepository is the repository containing the Kubermatic dashboard image.
     dockerRepository: quay.io/kubermatic/dashboard
+    # ExtraVolumeMounts allows to mount additional volumes into the UI container.
+    extraVolumeMounts: null
+    # ExtraVolumes allows to mount additional volumes into the UI container.
+    extraVolumes: null
     # Replicas sets the number of pod replicas for the UI deployment.
     replicas: 2
     # Resources describes the requested and maximum allowed CPU/memory usage.
