Add `imagePullSecrets` value for all Helm charts maintained by Kubermatic (#12098)
* First batch of helm charts with imagePullSecrets values

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Add imagePullSecrets to monitoring charts

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Update test output

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Add tests for oauth and minio charts

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Fix template to not generate trailing whitespace

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

---------

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/charts/minio/templates/deployment.yaml
+++ b/charts/minio/templates/deployment.yaml
@@ -38,6 +38,9 @@ spec:
         pre.hook.backup.velero.io/command: '["mc", "mirror", "--remove", "--quiet", "src", "/backup"]'
         {{- end }}
     spec:
+      {{- if .Values.minio.imagePullSecrets }}
+      imagePullSecrets: {{- toYaml .Values.minio.imagePullSecrets | nindent 8 }}
+      {{- end }}
       containers:
       - name: minio
         image: '{{ .Values.minio.image.repository }}:{{ .Values.minio.image.tag }}'
