--- a/charts/oauth/templates/deployment.yaml
+++ b/charts/oauth/templates/deployment.yaml
@@ -35,6 +35,9 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
     spec:
       serviceAccountName: dex
+      {{- if .Values.dex.imagePullSecrets }}
+      imagePullSecrets: {{- toYaml .Values.dex.imagePullSecrets | nindent 8 }}
+      {{- end }}
       containers:
       - image: {{ .Values.dex.image.repository }}:{{ .Values.dex.image.tag }}
         name: dex
