Install CRDs needed on standalone Seed when provisioning Seeds
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_groupprojectbindings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_groupprojectbindings.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
-    kubermatic.k8c.io/location: master
+    kubermatic.k8c.io/location: master,seed
   creationTimestamp: null
   name: groupprojectbindings.kubermatic.k8c.io
 spec:
