--- a/pkg/crd/k8s.io/autoscaling.k8s.io_verticalpodautoscalercheckpoints.yaml
+++ b/pkg/crd/k8s.io/autoscaling.k8s.io_verticalpodautoscalercheckpoints.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     api-approved.kubernetes.io: https://github.com/kubernetes/kubernetes/pull/63797
     controller-gen.kubebuilder.io/version: v0.4.0
+    kubermatic.k8c.io/location: "seed"
   creationTimestamp: null
   name: verticalpodautoscalercheckpoints.autoscaling.k8s.io
 spec:
