[release/v2.22] Install CRDs needed on standalone Seed when provisioning Seeds (#12117)
* Install CRDs needed on standalone Seed when provisioning Seeds

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Mark VPA resources as to be installed onto seeds

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Ignore new third-party CRD directory

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Ensure that k8s.io CRDs get loaded

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Load CRD from correct directory

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Make the linter happy

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

---------

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_resourcequotas.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_resourcequotas.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.10.0
-    kubermatic.k8c.io/location: master
+    kubermatic.k8c.io/location: master,seed
   creationTimestamp: null
   name: resourcequotas.kubermatic.k8c.io
 spec:
