API token authentication support for VMware Cloud Director
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/csi/vmware-cloud-director/vcloud-basic-auth.yaml
+++ b/addons/csi/vmware-cloud-director/vcloud-basic-auth.yaml
@@ -25,5 +25,6 @@ metadata:
 data:
   username: {{ .Credentials.VMwareCloudDirector.Username | b64enc }}
   password: {{ .Credentials.VMwareCloudDirector.Password | b64enc }}
+  refreshToken: {{ .Credentials.VMwareCloudDirector.APIToken | b64enc }}
 
 {{ end }}
