Add APIToken support in preset
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -382,6 +382,8 @@ spec:
                   type: array
                 vmwareclouddirector:
                   properties:
+                    apiToken:
+                      type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
                       type: string
@@ -399,6 +401,7 @@ spec:
                     vdc:
                       type: string
                   required:
+                    - apiToken
                     - organization
                     - ovdcNetwork
                     - password
