API token authentication support for VMware Cloud Director (#12124)
* API token authentication support for VMware Cloud Director

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Add APIToken support in preset

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -382,6 +382,8 @@ spec:
                   type: array
                 vmwareclouddirector:
                   properties:
+                    apiToken:
+                      type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
                       type: string
@@ -401,8 +403,6 @@ spec:
                   required:
                     - organization
                     - ovdcNetwork
-                    - password
-                    - username
                     - vdc
                   type: object
                 vsphere:
